--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.9.0
 protobuf<3.21.0
+altair<5
 torch==1.8.2+cpu
 torchvision==0.9.2+cpu
 -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
